--- a/apis/composition.yaml
+++ b/apis/composition.yaml
@@ -45,8 +45,8 @@ spec:
           transforms:
           - type: map
             map:
-              east: us-east-1
-              west: us-west-1
+              east: cn-north-1
+              west: cn-northwest-1
         - fromFieldPath: "spec.parameters.size"
           toFieldPath: "spec.forProvider.instanceClass"
           transforms:
